fixed the scrollbar issue #181

--- a/petshelter-frontend/src/App.css
+++ b/petshelter-frontend/src/App.css
@@ -17,7 +17,7 @@
   background: -ms-linear-gradient(left, rgba(242,246,248,1) 0%, rgba(224,239,249,1) 42%, rgba(222,235,244,1) 49%, rgba(216,225,231,1) 68%, rgba(181,198,208,1) 100%);
   background: linear-gradient(to right, rgba(242,246,248,1) 0%, rgba(224,239,249,1) 42%, rgba(222,235,244,1) 49%, rgba(216,225,231,1) 68%, rgba(181,198,208,1) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f6f8', endColorstr='#b5c6d0', GradientType=1 );
-  min-height: 90vh;
+  max-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
